導覽列樣式更新

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>星巴克 | starbucks</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- 導覽列 -->
+    <!-- nav 導覽列元素 -->
+    <!-- 有語意的元素 -->
+    <nav>
+        <div id="logo"><img src="./img/logo.png" alt="星巴克 LOGO"></div>
+        <div id="link">
+            <a href="">商品類型</a>
+            <a href="">門市資訊</a>
+            <a href="">其他服務</a>
+        </div>
+        <div id="social">
+            <img src="./img/icon-fb.png" alt="facebook 臉書"><img src="./img/icon-ig.png" alt="instagram ig">
+        </div>
+    </nav>
 
     <!-- 最新商品 -->
 
