--- a/index.html
+++ b/index.html
@@ -67,7 +67,39 @@
         </div>
     </section>
     <!-- 門市資訊 -->
-
+    <section id="info">
+        <div>
+            <div class="pic">
+                <img src="./img/info1.jpg" alt="">
+            </div>
+            <div class="text">
+                <h1>標題</h1>
+                <hr>
+                <p>段落</p>
+                <a href="" class="button">MORE</a>
+            </div>
+        </div>
+        <div>
+            <div class="pic">
+                <img src="./img/info2.jpg" alt="">
+            </div>
+            <div class="text">
+                <h1>標題</h1>
+                <hr>
+                <p>段落</p>
+                <a href="" class="button">MORE</a></div>
+        </div>
+        <div>
+            <div class="pic">
+                <img src="./img/info3.jpg" alt="">
+            </div>
+            <div class="text">
+                <h1>標題</h1>
+                <hr>
+                <p>段落</p>
+                <a href="" class="button">MORE</a></div>
+        </div>
+    </section>
     <!-- 其他服務 -->
 
     <!-- 頁尾 -->
