添增頁尾區

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
     <!-- 其他服務 -->
 
     <!-- 頁尾 -->
+    <footer>
+        <div id="footer-social">
+            <a href="" target="blank"><img src="./img/icon-fb.png" alt="facebook 臉書"></a>
+            <a href="" target="blank"><img src="./img/icon-ig.png" alt="instagram ig"></a>
+        </div>
+        <div id="footer-link">
+            <a href="">網站地圖</a>
+            <a href="">個人資料保護政策</a>
+            <a href="">使用條款與須知</a>
+            <a href="">聯絡我們</a>
+        </div>
+        <div id="contact">客服專線 0800-000-482 (服務時間: 週一至週六 09:00-18:00，週日與國定假日除外)</div>
+        <div>&copy; 2021 Starbucks Company </div>
+    </footer>
     
 </body>
 </html>
